# AINews

./: .env.example  .gitignore  PLAN.md  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
data/: sources_seed.csv
scripts/: run_digest.py  run_pipeline.py  seed_sources.py
src/ai_digest/: __init__.py  config.py  database.py  main.py  seed.py  taxonomy.py
src/ai_digest/api/: routes_digest.py  routes_health.py  routes_sources.py  routes_web.py
src/ai_digest/connectors/: __init__.py  api_poll.py  base.py  factory.py  github_releases.py  html_diff.py  rss.py
src/ai_digest/delivery/: __init__.py  email_sender.py  web_publisher.py
src/ai_digest/digest/: __init__.py  generator.py  renderer.py  sections.py
src/ai_digest/models/: __init__.py  cluster.py  digest.py  raw_item.py  snapshot.py  source.py  update_event.py
src/ai_digest/pipeline/: __init__.py  dedupe.py  entity_resolution.py  normalize.py  ranking.py  summarizer.py
src/ai_digest/scheduler/: __init__.py  jobs.py
templates/email/: digest.html
templates/web/: archive.html  base.html  digest.html
tests/: conftest.py
tests/test_connectors/: test_github.py  test_html_diff.py  test_rss.py
tests/test_digest/: test_generator.py  test_sections.py
tests/test_pipeline/: test_dedupe.py  test_normalize.py  test_ranking.py  test_summarizer.py
