[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-digest"
version = "0.1.0"
description = "AI Updates Daily Digest — automated AI industry news pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "feedparser>=6.0,<7",
    "beautifulsoup4>=4.12,<5",
    "jinja2>=3.1,<4",
    "anthropic>=0.42,<1",
    "apscheduler>=3.10,<4",
    "resend>=2.0,<3",
    "boto3>=1.35,<2",
    "python-dotenv>=1.0,<2",
    "aiosmtplib>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "httpx",
    "aiosqlite>=0.20,<1",
    "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_digest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
